--- a/index.html
+++ b/index.html
@@ -248,6 +248,13 @@
               <button class="event__data-btn">12:00</button>
               <button class="event__data-btn">12:00</button>
               <button class="event__data-btn">12:00</button>
+              <button class="event__data-btn">12:00</button>
+              <button class="event__data-btn">12:00</button>
+              <button class="event__data-btn">12:00</button>
+              <button class="event__data-btn">12:00</button>
+              <button class="event__data-btn">12:00</button>
+              <button class="event__data-btn">12:00</button>
+              <button class="event__data-btn">12:00</button>
             </div>
           </div>
           <div class="event__info-block">
