--- a/calculate.html
+++ b/calculate.html
@@ -20,6 +20,7 @@
         <div class="calculate__disable blockTimeTo">
           <label for="timeTo" class="calculate__label">Выберите время</label>
           <select name="timeTo" id="time" class="calculate__select">
+            <option value="default">Выберите время</option>
             <option value="18:00">18:00(из A в B)</option>
             <option value="18:30">18:30(из A в B)</option>
             <option value="18:45">18:45(из A в B)</option>
@@ -31,6 +32,7 @@
         <div class="calculate__disable blockTimeBack">
           <label for="timeBack" class="calculate__label">Выберите время</label>
           <select name="timeBack" id="time" class="calculate__select">
+            <option value="default">Выберите время</option>
             <option value="18:30">18:30(из B в A)</option>
             <option value="18:45">18:45(из B в A)</option>
             <option value="19:00">19:00(из B в A)</option>
